장르추천 완성

--- a/front/movie_front.html
+++ b/front/movie_front.html
@@ -17,7 +17,28 @@
 <h1>정우진의 첫 영화 추천 서비스</h1>
 </div>
 
+<h2>오늘의 영화추천</h2>
 
+<div id="alldiv"; style = "column-count: 5;"></div>
+
+<hr>
+<h2>장르별 추천</h2>
+<select name="" id="sgenre">
+    <option value="comedy">코메디</option>
+    <option value="drama">드라마</option>
+    <option value="crime">범죄</option>
+    <option value="fantasy">판타지</option>
+    <option value="animation">에니메이션</option>
+</select>
+<button type="button" class="btn bg-primary btn-lg" onclick="MovieObject.getgenres()">장르선택</button>
+
+<div id="genrediv"; style = "column-count: 5;"></div>
+
+<h2>영화기반 추천</h2>
+<div id="itemdiv"; style = "column-count: 5;"></div>
+
+<h2>사용자기반 추천</h2>
+<div id="userdiv"; style = "column-count: 5;"></div>
 
 </body>
 </html>
